--- a/Portfolio.html
+++ b/Portfolio.html
@@ -43,7 +43,7 @@
 
                     <div class="swiper-slide">
                         <video autoplay loop muted playsinline controls>
-                            <source src="synthèse.mp4" type="video/mp4">
+                            <source src="synthese.mp4" type="video/mp4">
                         </video>
                     </div>
                 </div>
